# aminyx-blog-agent

./: ..env.example.swp  .dockerignore  .env.example  .gitignore  =2.10.1  docker-compose.local.yml  docker-compose.pars.yml  docker-compose.yml  pyproject.toml  requirements.txt
apis/: openapi.json
backend/: Dockerfile  Dockerfile.pars  alembic.ini  entrypoint.sh  file_reader.py  run_tests.sh
backend/config/: config.yaml  docker.yaml
backend/data/agent/: README.md  instructions.md  strategy-content-instructions.md
backend/data/agent/knowledge/: company-overview.en.md  company-overview.fa.original.txt
backend/src/aminyx_suggestion_agent/: __main__.py  app.py  config.py  container.py
backend/src/aminyx_suggestion_agent/ai_agent/: domain.py  service.py  worker.py
backend/src/aminyx_suggestion_agent/ai_agent/infrastructure/: __init__.py  callback_client.py  gemini_client.py  metis_client.py
backend/src/aminyx_suggestion_agent/ai_agent/repository/: redis.py
backend/src/aminyx_suggestion_agent/core/db/: redis.py
backend/src/aminyx_suggestion_agent/strategy_content/: domain.py  service.py  worker.py
backend/test/: TEST_PLAN.md  conftest.py  pytest.ini  run_tests.sh  test_agent_suggestion_endpoints.py  test_health_endpoints.py  test_strategy_content_endpoints.py  test_system_endpoints.py
backend/test/call_test/: client.py  conftest.py  payloads.py  run.py  tasks.py  test_api_calls.py
backend/test/crud/: conftest.py  test_strategy_content_job_repository.py  test_suggestion_job_repository.py
backend/test/support/: app_factory.py  factories.py  payloads.py
(+11 files in other folders)
